--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	
-	<title>Future of Humanitarian Work</title>
+	<title>HUGO.2035</title>
 	
 	<meta name="description" content="">
 	
