--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 	
 	  <!-- <div class="artwork"></div>-->
 	  <div class="artwork">
-		
-		
 		<div class="bodycopy">
 		
 		    <!-- <div class="x0"> </div> -->
 		
-		    <div class="x0">When Hugo and </div>
+		    <div class="x0">When Hugo and</div>
 			
-			<div class="x1">business women</div>
+			<div class="x1">business women</div>,
 			
-			<div class="y0">learn to read</div>,
+			<div class="y0"></div>
+			
+			<div class="y1">learn to read</div>,
 			
 			<div class="z0">they</div>
 			
