--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 		    <div class="x0">When Hugo and </div>
 			
 			<div class="x1">business women</div>
-			
-			<div class="y0">learn to read</div>,
+						<div class="y0"></div>
+
+			<div class="y1">learn to read</div>,
 			
 			<div class="z0">they</div>
 			
