--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 	
 	  <!-- <div class="artwork"></div>-->
 	  <div class="artwork">
+	  				<p>co-created by [sa*(h+l)]*il</p>
+
 		<div class="bodycopy">
 		
 		    <!-- <div class="x0"> </div> -->
@@ -39,9 +41,8 @@
 			<div class="z0">they</div>
 			
 			<div class="z1">___________</div>?
-			
-			<!--<div class="z1">never ending floods have displaced her whole town</div>-->
-		</div>
+					</div>
+		
 	</div>
 </body>
 </html>
